--- a/moderation/package.json
+++ b/moderation/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "query",
+  "name": "moderation",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -10,8 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.7.4",
-    "cors": "^2.8.5",
+    "axios": "^1.7.3",
     "express": "^4.19.2",
     "nodemon": "^3.1.4"
   }
